NT/ds/security/cryptoapi/pkitrust/tests/signing/bad/b_dig.exe
version https://git-lfs.github.com/spec/v1
oid sha256:b50a06443a0ebe9cfce625bf26db7de1b6b02881d45e8a6665976c3052da8a17
size 22848
